@@ -50,7 +50,7 @@ class Typo3_Bootstrap_BaseSetup {
 	 * @return void
 	 */
 	public static function run($relativePathPart = '') {
-		self::checkPhpVersionOrDie();
+		self::ensureRequiredEnvironment();
 		self::checkGlobalsAreNotSetViaPostOrGet();
 		self::defineBaseConstants();
 		self::definePaths($relativePathPart);
@@ -69,10 +69,25 @@ class Typo3_Bootstrap_BaseSetup {
 	 *
 	 * @return void
 	 */
-	protected static function checkPhpVersionOrDie() {
+	protected static function ensureRequiredEnvironment() {
 		if (version_compare(phpversion(), '5.3', '<')) {
 			die('TYPO3 requires PHP 5.3.0 or higher.');
 		}
+
+		if (self::getPhpIniValueBoolean('register_globals')) {
+			die('TYPO3 requires PHP setting "register_globals" set to Off. (Error: #1345284320)');
+		}
+	}
+
+	/**
+	 * Cast a on/off php ini value to boolean
+	 *
+	 * @param string $configOption
+	 * @return boolean TRUE if the given option is enabled, FALSE if disabled
+	 * @see t3lib_utility_PhpOptions::getIniValueBoolean
+	 */
+	protected static function getPhpIniValueBoolean($configOption) {
+		return filter_var(ini_get($configOption), FILTER_VALIDATE_BOOLEAN, array(FILTER_REQUIRE_SCALAR, FILTER_NULL_ON_FAILURE));
 	}
 
 	/**
